--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pw.mihou</groupId>
     <artifactId>Rose-Java-Driver</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.5</version>
 
     <build>
         <plugins>
