Added graceful shutdown, blocking connect (also non-blocking parts), logging and more checks for connection.
Signed-off-by: Mihou <kokocrunchsh@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.30</version>
+        </dependency>
     </dependencies>
 </project>
