--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,28 @@
-name: Github Pages Deploy Action
-# You may pin to the exact commit or the version.
-# uses: avinal/github-pages-deploy-action@7702e2ad1f82097323b08b428c8f57cb21dd965b
-uses: avinal/github-pages-deploy-action@v0.9
-  with:
-    # GitHub access token with Repo Access
-    GITHUB_TOKEN: # default is ${{ github.token }}
-    # java(for JavaDoc), python(For Python Site/Documentation Generators)
-    LANGUAGE: java
-    # make command to generate html
-    MAKE_COMMAND: # default is make html
-    # Deploy pages to which branch
-    PAGES_BRANCH: # default is gh-pages
-    # Generate Site from which branch
-    BUILD_FROM: # default is master
-    # folder in which generated files are stored
-    DOCS_FOLDER: # default is docs
+    name: GitHub Pages Deploy Action
+    on:
+        # Branch name(s) which have the source file for site/documentation
+        push:
+          branches:
+            - master
+    jobs:
+        deploy-pages:
+            name: Deploy to GitHub Pages
+            runs-on: ubuntu-latest
+            steps:
+                # Use avinal/github-pages-deploy-action@<latest-release-tag> for latest stable release
+                # Do not change the line below except the word main with tag number maybe
+                - uses: avinal/github-pages-deploy-action@main
+                  with:
+                    # GitHub access token with Repo Access
+                    GITHUB_TOKEN: ${{ github.token }}
+                    # For JavaDoc - "java"
+                    # For python write python package and additional packages if any - "python3 python3-pip" 
+                    LANGUAGE: "java"
+                    # Write make command to generate html e.g.- "make html"
+                    MAKE_COMMAND: "make html"
+                    # Write the branch name for storing github pages source 
+                    PAGES_BRANCH: "gh-pages"
+                    # Write the branch name having source files for site/documentation
+                    BUILD_FROM: "master"
+                    # Write the name of the output folder where generated html is stored by makefile.
+                    DOCS_FOLDER: "docs"
